fix margin collapse
added 20px margin bottom to .a-1 to offset the 20px positioning on the
top

--- a/wp/wp-content/themes/blue-herons-resistance/blue-herons-resistance.less
+++ b/wp/wp-content/themes/blue-herons-resistance/blue-herons-resistance.less
@@ -4,7 +4,7 @@
 	border: 1px solid #8ed9f6;
 	clear: both;
 	margin-bottom: 20px;
-	padding: 20px;
+	padding: 40px;
 	position: relative;
 	top: 20PX;
 }
